# mlip-inference-bench

./: .gitignore  README.md  modal_app.py  pyproject.toml
benchmark/: config.py  profile_models.py  run_benchmark.py
frontend/: index.html
results/: sample_results.json
